// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KlachtenDetail > No subject or location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/klachten"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Klacht
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_08bf39"
      >
        <dt
          class="_Datalist__title_08bf39"
        >
          Nummer van uw klacht
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          36046
        </dd>
        <dt
          class="_Datalist__title_08bf39"
        >
          Wat is de klacht?
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          Dear Amsterdam Municipality
        </dd>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject and location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/klachten"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Boosterprik
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_08bf39"
      >
        <dt
          class="_Datalist__title_08bf39"
        >
          Nummer van uw klacht
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          34994
        </dd>
        <dt
          class="_Datalist__title_08bf39"
        >
          Wat is de klacht?
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          Een klacht.
        </dd>
        <dt
          class="_Datalist__title_08bf39"
        >
          Wat is de locatie waar de klacht is ontstaan?
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          RAI
        </dd>
        <dt
          class="_Datalist__title_08bf39"
        >
          Wat wilt u dat de gemeente gaat doen naar aanleiding van uw klacht?
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          Boosterprik
        </dd>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject no location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/klachten"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Test voor decentrale toewijzing
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <dl
        class="_Datalist_08bf39"
      >
        <dt
          class="_Datalist__title_08bf39"
        >
          Nummer van uw klacht
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          36049
        </dd>
        <dt
          class="_Datalist__title_08bf39"
        >
          Wat is de klacht?
        </dt>
        <dd
          class="_Datalist__description_08bf39"
        >
          Dit is de omschrijving van de klacht
        </dd>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;
